--- a/FL11_HW1/homework/index.html
+++ b/FL11_HW1/homework/index.html
@@ -13,73 +13,73 @@
             <div id="container">
                 <div id="content" role="main">
 
-                    <img src="logo.png" alt="EPAM logo">
-
                     <header>
+                        <img src="logo.png" alt="EPAM logo">
                         <h1>HTML Elements</h1>
                     </header>
 
-                    <hr>
-                    <nav>
-                        <a href="#"><strong>Home</strong></a>
-                        <a href="#headers"><strong>Headers</strong></a>
-                        <a href="#textFormats"><strong>Text formats</strong></a>
-                        <a href="#list"><strong>List</strong></a>
-                        <a href="#table"><strong>Table</strong></a>
-                        <a href="#blockquote"><strong>Blockquotes</strong></a>
-                    </nav>
+                    <main>
+                        <hr>
+                        <nav>
+                            <a href="#"><strong>Home</strong></a>
+                            <a href="#headers"><strong>Headers</strong></a>
+                            <a href="#textFormats"><strong>Text formats</strong></a>
+                            <a href="#list"><strong>List</strong></a>
+                            <a href="#table"><strong>Table</strong></a>
+                            <a href="#blockquote"><strong>Blockquotes</strong></a>
+                        </nav>
 
-                    <hr>
-                    <section>
-                        <p>
-                            Lorem ipsum dolor sit amet,
-                            <a href="#">test link</a> adipiscing elit.
-                            <strong>This is strong. </strong> Nullam dignissim convallis est. Quisque aliquam.
-                            <em>This is emphasized. </em> Donec faucibus. Nunc iaculis suscipit dui. 5
-                            <sup>3</sup> = 125. Water is H<sub>2</sub>O. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl.
-                            <cite>The New York Times</cite> (That&#8217;s a citation).
-                            <u>Underline.</u> Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.
-                        </p>
-                        <p>
-                            Watch out for the abbreviations!
-                            <abbr title="Hyper Text Markup Language">HTML</abbr> and
-                            <abbr title="Cascading Style Sheets">CSS</abbr> are our tools. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus. Praesent mattis, massa quis luctus fermentum,
-                            turpis mi volutpat justo, eu volutpat enim diam eget metus. To copy a file type
-                            <kbd>COPY</kbd>
-                            <em>filename.</em>
-                            <del>Dinner`s at 5:00.</del>
-                            <ins>Let&#8217;s make that 7.</ins> This <s>text</s> has been struck.
-                        </p>
-                    </section>
+                        <hr>
+                        <section>
+                            <p>
+                                Lorem ipsum dolor sit amet,
+                                <a href="#">test link</a> adipiscing elit.
+                                <strong>This is strong. </strong> Nullam dignissim convallis est. Quisque aliquam.
+                                <em>This is emphasized. </em> Donec faucibus. Nunc iaculis suscipit dui. 5
+                                <sup>3</sup> = 125. Water is H<sub>2</sub>O. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl.
+                                <cite>The New York Times</cite> (That&#8217;s a citation).
+                                <u>Underline.</u> Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.
+                            </p>
+                            <p>
+                                Watch out for the abbreviations!
+                                <abbr title="Hyper Text Markup Language">HTML</abbr> and
+                                <abbr title="Cascading Style Sheets">CSS</abbr> are our tools. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus. Praesent mattis, massa quis luctus fermentum,
+                                turpis mi volutpat justo, eu volutpat enim diam eget metus. To copy a file type
+                                <kbd>COPY</kbd>
+                                <em>filename.</em>
+                                <del>Dinner`s at 5:00.</del>
+                                <ins>Let&#8217;s make that 7.</ins> This <s>text</s> has been struck.
+                            </p>
+                        </section>
 
-                    <hr>
-                    <section id="headers">
-                        <p>Pay attention to h1 tag inside section element. Font-size for h1 is the same as font-size for h2, because we have to use only one h1 on the page, and it is commonly used inside header</p>
-                        <h2>Header 2</h2>
-                        <h3>Header 3</h3>
-                        <h4>Header 4</h4>
-                        <h5>Header 5</h5>
-                        <h6>Header 6</h6>
-                    </section>
+                        <hr>
+                        <section id="headers">
+                            <p>Pay attention to h1 tag inside section element. Font-size for h1 is the same as font-size for h2, because we have to use only one h1 on the page, and it is commonly used inside header</p>
+                            <h2>Header 2</h2>
+                            <h3>Header 3</h3>
+                            <h4>Header 4</h4>
+                            <h5>Header 5</h5>
+                            <h6>Header 6</h6>
+                        </section>
 
-                    <hr>
-                    <section id="textFormats">
-                        <header>
-                            <h2>Text formats</h2>
-                        </header>
-                        <h3>Article Text</h3>
-                        <article>
+                        <hr>
+                        <section id="textFormats">
                             <header>
-                                <h2>Article title</h2>
+                                <h2>Text formats</h2>
                             </header>
-                            <p>Article description</p>
-                        </article>
+                            <h3>Article Text</h3>
+                            <article>
+                                <header>
+                                    <h2>Article title</h2>
+                                </header>
+                                <p>Article description</p>
+                            </article>
 
-                        <h3>Preformatted Text</h3>
-                        <pre><strong>Text</strong><br>  in a <strong>pre</strong> element<br>    is displayed in a fixed-width <br>font, and it preserves<br>both           spaces and <br>    line breaks
+                            <h3>Preformatted Text</h3>
+                            <pre><strong>Text</strong><br>  in a <strong>pre</strong> element<br>    is displayed in a fixed-width <br>font, and it preserves<br>both           spaces and <br>    line breaks
                         </pre>
-                        <h3>This is code</h3>
-                        <pre>
+                            <h3>This is code</h3>
+                            <pre>
                             <code>
  .wrapper {
    display: flex;
@@ -88,133 +88,134 @@
  }
                             </code>
                         </pre>
-                    </section>
+                        </section>
 
-                    <section id="list">
-                        <h2>Unordered Product List</h2>
-                        <ul>
-                            <li>Eggs</li>
-                            <li>Meat
-                                <ul>
-                                    <li>Chicken</li>
-                                    <li>Beef</li>
-                                    <li>Pork</li>
-                                </ul>
-                            </li>
-                            <li>Milk</li>
-                        </ul>
+                        <section id="list">
+                            <h2>Unordered Product List</h2>
+                            <ul>
+                                <li>Eggs</li>
+                                <li>Meat
+                                    <ul>
+                                        <li>Chicken</li>
+                                        <li>Beef</li>
+                                        <li>Pork</li>
+                                    </ul>
+                                </li>
+                                <li>Milk</li>
+                            </ul>
 
-                        <h2>Ordered TODO List</h2>
-                        <ol>
-                            <li>Relax</li>
-                            <li>Finish homework
-                                <ol>
-                                    <li>Analyze requirements</li>
-                                    <li>Create HTML page</li>
-                                    <li>Upload to GitHub</li>
-                                </ol>
-                            </li>
-                            <li>Enjoy your day</li>
-                        </ol>
+                            <h2>Ordered TODO List</h2>
+                            <ol>
+                                <li>Relax</li>
+                                <li>Finish homework
+                                    <ol>
+                                        <li>Analyze requirements</li>
+                                        <li>Create HTML page</li>
+                                        <li>Upload to GitHub</li>
+                                    </ol>
+                                </li>
+                                <li>Enjoy your day</li>
+                            </ol>
 
-                        <h3>Definition List</h3>
-                        <dl>
-                            <dt>HTML</dt>
-                            <dd>HTML is the standard markup language for Web pages</dd>
-                            <dt>CSS</dt>
-                            <dd>CSS describes how HTML elements are to be displayed</dd>
-                            <dt>JavaScript</dt>
-                            <dd>JavaScript is the Programming Language for the Web</dd>
-                        </dl>
+                            <h3>Definition List</h3>
+                            <dl>
+                                <dt>HTML</dt>
+                                <dd>HTML is the standard markup language for Web pages</dd>
+                                <dt>CSS</dt>
+                                <dd>CSS describes how HTML elements are to be displayed</dd>
+                                <dt>JavaScript</dt>
+                                <dd>JavaScript is the Programming Language for the Web</dd>
+                            </dl>
 
-                        <p>Select option
-                            <select>
+                            <p>Select option
+                                <select>
                             <option>HTML</option>
                             <option>CSS</option>
                             <option>JS</option>
                         </select>
-                        </p>
-                    </section>
+                            </p>
+                        </section>
 
-                    <hr>
-                    <hr>
-                    <section id="table">
-                        <header>
-                            <h2>Table</h2>
-                        </header>
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>Cities</th>
-                                    <th>Technologies</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Lviv</td>
-                                    <td>HTML</td>
-                                </tr>
-                                <tr>
-                                    <td>Vinnytsia</td>
-                                    <td>CSS</td>
-                                </tr>
-                                <tr>
-                                    <td>Dnipro</td>
-                                    <td>JavaScript</td>
-                                </tr>
-                                <tr>
-                                    <td>Kharkiv</td>
-                                    <td>Angular</td>
-                                </tr>
-                                <tr>
-                                    <td>Kyiv</td>
-                                    <td>ReactJS</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </section>
+                        <hr>
+                        <hr>
+                        <section id="table">
+                            <header>
+                                <h2>Table</h2>
+                            </header>
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Cities</th>
+                                        <th>Technologies</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Lviv</td>
+                                        <td>HTML</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Vinnytsia</td>
+                                        <td>CSS</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Dnipro</td>
+                                        <td>JavaScript</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Kharkiv</td>
+                                        <td>Angular</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Kyiv</td>
+                                        <td>ReactJS</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </section>
 
-                    <section id="blockquote">
-                        <header>
-                            <h2>Blockquotes</h2>
-                        </header>
-                        <p>Let&#8217;s keep it simple. Italics are good to help set it off from the body text. Be sure to style the citation.</p>
-                        <blockquote>
-                            "If you go back a few hundred years, what we take for granted today would seem like magic-being able to talk to people over long distances, to transmit images, flying, accessing vast amounts of data like an oracle. These are all things that would have
-                            been considered magic a few hundred years ago." <br>
-                            <a href="#Elon_Musk">Elon Musk</a>
-                        </blockquote>
-                    </section>
+                        <section id="blockquote">
+                            <header>
+                                <h2>Blockquotes</h2>
+                            </header>
+                            <p>Let&#8217;s keep it simple. Italics are good to help set it off from the body text. Be sure to style the citation.</p>
+                            <blockquote>
+                                "If you go back a few hundred years, what we take for granted today would seem like magic-being able to talk to people over long distances, to transmit images, flying, accessing vast amounts of data like an oracle. These are all things that would have
+                                been considered magic a few hundred years ago." <br>
+                                <a href="#Elon_Musk">Elon Musk</a>
+                            </blockquote>
+                        </section>
 
-                    <hr>
-                    <section>
-                        <form action="#" id="form1">
-                            <label>
+                        <hr>
+                        <section>
+                            <form action="#" id="form1">
+                                <label>
                                 First name:
                                 <input type="text" name="firstName">
                             </label>
-                            <br>
-                            <label>
+                                <br>
+                                <label>
                                 Second name:
                                 <input type="text" name="secondName">
                             </label>
-                            <br>
-                            <label>
+                                <br>
+                                <label>
                                 Email:
                                 <input type="email" name="email">
                             </label>
-                            <br>
-                            <label>
+                                <br>
+                                <label>
                                 Password:
                                 <input type="password" name="pass">
                             </label>
-                            <br>
-                            <textarea cols="30" rows="5" name="message"></textarea>
-                            <br>
-                            <button type="submit" form="form1" value="Submit" name="submit">Submit</button>
-                        </form>
-                    </section>
-                    
+                                <br>
+                                <textarea cols="30" rows="5" name="message"></textarea>
+                                <br>
+                                <button type="submit" form="form1" value="Submit" name="submit">Submit</button>
+                            </form>
+                        </section>
+                    </main>
+
                     <footer>
                         &#169; Copyright Epam Systems
                     </footer>
@@ -223,4 +224,5 @@
         </div>
     </div>
 </body>
+
 </html>
