--- a/FL11_HW1/homework/index.html
+++ b/FL11_HW1/homework/index.html
@@ -216,7 +216,7 @@
                     </main>
 
                     <footer>
-                        &#169; Copyright Epam Systems
+                        <p>&#169; Copyright Epam Systems</p>
                     </footer>
                 </div>
             </div>
