--- a/FL11_HW1/homework/index.html
+++ b/FL11_HW1/homework/index.html
@@ -216,7 +216,7 @@
                     </main>
 
                     <footer>
-                        <p>&#169; Copyright Epam Systems</p>
+                        <span>&#169; Copyright Epam Systems</span>
                     </footer>
                 </div>
             </div>
