--- a/FL11_HW4/homework/index.html
+++ b/FL11_HW4/homework/index.html
@@ -34,7 +34,9 @@
     <main>
         <section class="bwt_wrap">
             <div class="bwt content_box">
-                <p class="text_right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quam cupiditate sequi, ullam repudiandae fugiat vero, labore suscipit quae quod harum corporis. Quam rem voluptates nulla reprehenderit ipsam culpa ratione?</p>
+                <p class="text_right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quam cupiditate
+                    sequi, ullam repudiandae fugiat vero, labore suscipit quae quod harum corporis. Quam rem voluptates
+                    nulla reprehenderit ipsam culpa ratione?</p>
                 <p class="text_left">Lorem ipsum dolor, consectetur adipisicing. Aenean <span class="bold">commodo
                         ligula</span> eget dolor.
                 </p>
@@ -50,16 +52,28 @@
                         <div class="caption">January 15 <span class="bold">South France</span></div>
                     </div>
                     <div class="article_text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque consequatur corporis earumhicquidem saepe a. Deleniti, corporis veniam modi ipsam, quos repellendus totam ab sunt quibusdam aliquid vero perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate beatae dicta animi nesciunt iste placeat velit quis illum soluta, consequuntur molestiae laboriosam, nam fugiat, a facilis doloremque saepe repellat rerum.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sunt corrupti unde eos odio quis tempore animi minus odit expedita? In distinctio dolor repudiandae minus nisi! Exercitationem aspernatur pariatur cupiditate.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque consequatur corporis
+                            earumhicquidem saepe a. Deleniti, corporis veniam modi ipsam, quos repellendus totam ab sunt
+                            quibusdam aliquid vero perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate beatae dicta animi
+                            nesciunt iste placeat velit quis illum soluta, consequuntur molestiae laboriosam, nam
+                            fugiat, a facilis doloremque saepe repellat rerum.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sunt corrupti unde eos odio
+                            quis tempore animi minus odit expedita? In distinctio dolor repudiandae minus nisi!
+                            Exercitationem aspernatur pariatur cupiditate.</p>
                     </div>
                 </article>
                 <article class="article">
                     <div class="article_text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque consequatur corporis earum hic quidem saepe a. Deleniti, corporis veniam modi ipsam, quos repellendus totam ab sunt quibusdam aliquid vero perspiciatis.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate beatae dicta animi nesciunt iste placeat velit quis illum soluta, consequuntur molestiae laboriosam, nam fugiat, a facilis doloremque saepe repellat rerum.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sunt corrupti unde eos odio quis tempore animi minus odit expedita? In distinctio dolor repudiandae minus nisi! Exercitationem aspernatur pariatur cupiditate.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque consequatur corporis earum
+                            hic quidem saepe a. Deleniti, corporis veniam modi ipsam, quos repellendus totam ab sunt
+                            quibusdam aliquid vero perspiciatis.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate beatae dicta animi
+                            nesciunt iste placeat velit quis illum soluta, consequuntur molestiae laboriosam, nam
+                            fugiat, a facilis doloremque saepe repellat rerum.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sunt corrupti unde eos odio
+                            quis tempore animi minus odit expedita? In distinctio dolor repudiandae minus nisi!
+                            Exercitationem aspernatur pariatur cupiditate.</p>
                     </div>
                     <div class="article_image_wrap">
                         <img class="article_image" src="img/sample-2.jpg" alt="Vestas office">
@@ -95,23 +109,30 @@
             <button class="btn_load_news" type="button">Load news</button>
         </section>
         <section class="subscribe_section">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad magnam sit sapiente, totam aperiam deserunt, ipsum odit, impedit voluptatem architecto consequuntur illo explicabo ipsam perspiciatis tempora quia! Eligendi, reprehenderit corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore eos tempore iste? Cum sapiente iusto corporis reiciendis, distinctio nam repellendus fugiat praesentium? Vitae iste libero totam modi explicabo quis doloremque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore accusantium itaque minima fugiat saepe consequatur laudantium dolores omnis sapiente nihil temporibus, possimus, explicabo totam quam provident aut hic blanditiis at.</p>
-                <form action="#" method="GET" class="form_wrap">
-                    <label for="email">Subscribe to our <span class="bold">newsletter</span></label>
-                    <input type="text" id="email" name="email" placeholder="Enter your e-mail">
-                    <button type="submit">Subscribe</button>
-                </form>
-            
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad magnam sit sapiente, totam aperiam deserunt,
+                ipsum odit, impedit voluptatem architecto consequuntur illo explicabo ipsam perspiciatis tempora quia!
+                Eligendi, reprehenderit corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore eos
+                tempore iste? Cum sapiente iusto corporis reiciendis, distinctio nam repellendus fugiat praesentium?
+                Vitae iste libero totam modi explicabo quis doloremque. Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Labore accusantium itaque minima fugiat saepe consequatur laudantium dolores omnis
+                sapiente nihil temporibus, possimus, explicabo totam quam provident aut hic blanditiis at.</p>
+            <form action="#" method="GET" class="form_wrap">
+                <label for="email">Subscribe to our <span class="bold">newsletter</span></label>
+                <input type="text" id="email" name="email" placeholder="Enter your e-mail">
+                <button type="submit">Subscribe</button>
+            </form>
+
         </section>
     </main>
     <footer>
-            <div class="copyright">&copy; 2019 Epam</div>
-            <div>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Shop</a>
-                <a href="#">Vacancies</a>
-            </div>
+        <div class="copyright">&copy; 2019 Epam</div>
+        <div>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Shop</a>
+            <a href="#">Vacancies</a>
+        </div>
     </footer>
 </body>
+
 </html>
