--- a/FL11_HW4/homework/index.html
+++ b/FL11_HW4/homework/index.html
@@ -16,11 +16,11 @@
                 Lorem & Ipsum
             </div>
             <div class="login_wrap">
-                <a href="#" class="">Login</a>
-                <a href="#" class="">Signup</a>
+                <a href="#">Login</a>
+                <a href="#">Signup</a>
             </div>
         </div>
-        <div class="">
+        <div>
             <h1 class="header_text">Lorem <span>&</span> Ipsum</h1>
             <div class="header_subtitle">An original brand since 1965</div>
         </div>
